# MULTISIGSYSYTEM

./: .gitignore  Anchor.toml  README.md  env.example  hardhat.config.ts  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
config/: testnet.config.ts
contracts/ethereum/: MultiSigWallet.sol  WalletFactory.sol
contracts/solana/: multisig_wallet.rs
deploy/: 01-deploy-multisig.ts
docs/: PRODUCTION_DEPLOYMENT.md  SECURITY.md  TESTNET_GUIDE.md
programs/multisig-wallet/: Cargo.toml
programs/multisig-wallet/src/: lib.rs
public/: manifest.json
scripts/: build-production.js  deploy-solana.ts  test-deployment.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: providers.tsx
src/components/layout/: Header.tsx
src/components/wallet/: CreateWalletModal.tsx  WalletConnection.tsx  WalletDashboard.tsx
src/hooks/: useWallet.ts
